--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body {
 .rs-navbar {
   position: relative;
   width: 100%;
-  display: inline-block;
   background: rgba(0, 0, 0, 0);
   color: white;
   padding: 0px 50px 0px 70px;
@@ -75,4 +74,13 @@ body {
   background-size: cover;
   width: 100%;
   height: 100vh;
+}
+
+@media only screen and (max-width: 670px) {
+  .rs-navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
